--- a/app.json
+++ b/app.json
@@ -1,5 +1,14 @@
 {
   "expo": {
+    "plugins": [
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera",
+          "recordAudioAndroid": true
+        }
+      ]
+    ],
     "name": "app-plantas",
     "slug": "app-plantas",
     "version": "1.0.0",
