--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.2",
-    "expo": "^51.0.7",
+    "expo": "^51.0.8",
+    "expo-camera": "~15.0.9",
     "expo-location": "~17.0.1",
+    "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "1.14.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
