--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -15,11 +15,13 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.2",
-    "expo": "^51.0.8",
-    "expo-camera": "~15.0.9",
+    "expo": "^51.0.9",
+    "expo-camera": "~15.0.10",
     "expo-location": "~17.0.1",
     "expo-permissions": "^14.4.0",
+    "expo-router": "^3.5.15",
     "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "^3.0.4",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "~2.16.1",
