--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,5 +1,18 @@
 rootProject.name = 'app-plantas'
 
+  // ...
+  include ':app'
+  includeBuild('../node_modules/@react-native/gradle-plugin')
+  
++ includeBuild('../node_modules/react-native') {
++     dependencySubstitution {
++         substitute(module("com.facebook.react:react-android")).using(project(":packages:react-native:ReactAndroid"))
++         substitute(module("com.facebook.react:react-native")).using(project(":packages:react-native:ReactAndroid"))
++         substitute(module("com.facebook.react:hermes-android")).using(project(":packages:react-native:ReactAndroid:hermes-engine"))
++         substitute(module("com.facebook.react:hermes-engine")).using(project(":packages:react-native:ReactAndroid:hermes-engine"))
++     }
++ }
+
 dependencyResolutionManagement {
   versionCatalogs {
     reactAndroidLibs {
