--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.2",
     "expo": "^51.0.9",
-    "expo-camera": "~15.0.10",
     "expo-location": "~17.0.1",
     "expo-permissions": "^14.4.0",
     "expo-router": "^3.5.15",
@@ -29,8 +28,7 @@
     "react-native-maps": "1.14.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
-    "react-native-vision-camera": "^4.0.5"
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
