--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.2",
-    "expo": "^51.0.9",
+    "expo": "^51.0.11",
     "expo-location": "~17.0.1",
     "expo-permissions": "^14.4.0",
     "expo-router": "^3.5.15",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "^3.0.4",
+    "expo-system-ui": "^3.0.6",
     "react": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "^0.74.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "1.14.0",
