--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-maps": "1.14.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "3.31.1",
+    "react-native-vision-camera": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
