--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-vision-camera": "^4.1.0"
+    "react-native-vision-camera": "4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
