--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
-  
   "dependencies": {
     "@babel/plugin-proposal-async-generator-functions": "^7.20.7",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
@@ -36,7 +35,8 @@
     "react-native-maps": "1.14.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "3.31.1",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
