--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.7",
-    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.2",
     "expo": "^51.0.11",
     "expo-location": "~17.0.1",
