--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.2",
-    "expo": "^51.0.11",
+    "expo": "~51.0.16",
     "expo-location": "~17.0.1",
-    "expo-router": "^3.5.15",
+    "expo-router": "~3.5.17",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "^3.0.6",
     "react": "18.2.0",
