--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "app-plantas",
-  "version": "1.0.1",
+  "name": "plants-app",
+  "version": "2.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -24,13 +24,13 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.2",
-    "expo": "~51.0.16",
+    "expo": "^51.0.17",
     "expo-location": "~17.0.1",
     "expo-router": "~3.5.17",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "^3.0.6",
+    "expo-system-ui": "^3.0.7",
     "react": "18.2.0",
-    "react-native": "^0.74.1",
+    "react-native": "^0.74.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "1.14.0",
