--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,12 +83,12 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.hugopessoa.appplantas'
+    namespace 'com.hugopessoa.plants-app'
     defaultConfig {
         applicationId 'com.hugopessoa.appplantas'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
+        versionCode 2
         versionName "2.0.0"
     }
     signingConfigs {
