--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,9 +83,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.hugopessoa.plants-app'
+    namespace 'com.mobile-app-plants.plants-app'
     defaultConfig {
-        applicationId 'com.hugopessoa.appplantas'
+        applicationId 'com.mobile-app-plants.plants-app'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 2
