--- a/app.json
+++ b/app.json
@@ -20,7 +20,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.hugopessoa.appplantas"
+      "package": "com.mobile-app-plants.plants-app"
     },
     "web": {
       "favicon": "./assets/favicon.png"
