--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "scheme": "app-plantas",
+    "scheme": "plantsapp",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
