--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,13 +83,13 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.mobileappplants.plantsapp'
+    namespace 'com.plantsmobile.plants-app'
     defaultConfig {
-        applicationId 'com.mobileappplants.plantsapp'
+        applicationId 'com.plantsmobile.plants-app'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "2.0.0"
+        versionName "1.0.0"
     }
     signingConfigs {
         debug {
