--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "plantsapp",
-    "slug": "plantsapp",
+    "name": "plants-app",
+    "slug": "plants-app",
     "version": "2.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -20,7 +20,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.mobileappplants.plantsapp"
+      "package": "com.plantsmobileapp.plants-app"
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -34,11 +34,11 @@
       }
     },
     "ios": {
-      "bundleIdentifier": "com.hugopessoa.appplantas"
+      "bundleIdentifier": "com.plantsmobileapp.plantsapp"
     },
     "plugins": [
       "expo-router"
     ],
-    "owner": "mobileappplants"
+    "owner": "plantsmobile"
   }
 }
