--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,9 +83,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.plantsmobile.plants-app'
+    namespace 'com.plantsmobile.appplants'
     defaultConfig {
-        applicationId 'com.plantsmobile.plants-app'
+        applicationId 'com.plantsmobile.appplants'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
