--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
         <data android:scheme="com.hugopessoa.appplantas"/>
         <data android:scheme="com.mobileappplants.plantsapp"/>
         <data android:scheme="plantsapp"/>
+        <data android:scheme="appplants"/>
+        <data android:scheme="com.plantsmobileapp.app_plants"/>
       </intent-filter>
     </activity>
     <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" android:exported="false"/>
