--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "app_plants",
     "slug": "appplants",
-    "version": "2.0.0",
+    "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -20,14 +20,14 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.plantsmobileapp.app_plants"
+      "package": "com.plantsmobiles.app_plants"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "extra": {
       "eas": {
-        "projectId": "eda9d7dc-28e1-4dae-be42-f67952c0fba8"
+        "projectId": "66683429-d26b-4037-b1a4-3f7d706ea53d"
       },
       "router": {
         "origin": false
@@ -36,6 +36,6 @@
     "plugins": [
       "expo-router"
     ],
-    "owner": "plantsmobille"
+    "owner": "plantsmobilles"
   }
 }
