--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         <data android:scheme="plantsapp"/>
         <data android:scheme="appplants"/>
         <data android:scheme="com.plantsmobileapp.app_plants"/>
+        <data android:scheme="com.plantsmobiles.app_plants"/>
       </intent-filter>
     </activity>
     <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" android:exported="false"/>
